@@ -33,3 +33,4 @@ if(MSVC)
   set_source_files_properties( pocl_topology.c pocl_topology.h PROPERTIES LANGUAGE CXX )
 endif(MSVC)
 add_library("pocl-devices-topology" OBJECT pocl_topology.c pocl_topology.h)
+harden("pocl-devices-topology")
