@@ -37,6 +37,12 @@ Notable Bug Fixes
 - Fix an issue in which the loop vectorizer produced code with invalid
   memory reads (issue #757).
 
+Security
+--------
+
+Added a build parameter HARDENING_ENABLE that applies hardening flags present in some modern compilers to produce a more secure libpocl.so with the trade-off in performance.
+
+
 1.5 April 2020
 ==============
 
